# cmake_practice_learn

./: README.md
t1/: CMakeLists.txt  hellocmake.cpp
t2/: CMakeLists.txt  COPYRIGHT  README  runhello.sh
t2/doc/: readme.md
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  libhello.so.1.2
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
t6/: CMakeLists.txt
t6/module/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.cpp
